# JDG

./: README.md  package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.css  App.tsx  layout.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  diagram_generator.rs  java_parser.rs  lib.rs  main.rs  types.rs
src-tauri/src/parsers/: class_parser.rs  enum_parser.rs  interface_parser.rs  mod.rs  record_parser.rs
src/components/: app-sidebar.tsx  copy-button.tsx  debounced-button.tsx  file-tree.tsx  mermaid.tsx  mode-toggle.tsx
src/components/ui/: sidebar.tsx
src/hooks/: store.ts
src/lib/: search.ts  utils.ts
src/types/: index.d.ts  types.ts
