[package]
name = "java-diagram-generator"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "java_diagram_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4.27"
tree-sitter = "0.20"
tree-sitter-java = "0.20"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
home = "0.5.11"
